--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
             rel="stylesheet"
     />
-    <title>To-Do App</title>
+    <title>Listify</title>
 </head>
 <body>
 <div id="app"></div>
